<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateContact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="104dp"
                android:layout_height="104dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/contactImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

            <EditText
                android:id="@+id/edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="182dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="228dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_company"
                android:inputType="textPersonName"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_url"
                android:inputType="textUri"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_address"
                android:inputType="textPersonName"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_birthday"
                android:inputType="date"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_nickname"
                android:inputType="textPersonName"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_Facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_facebook"
                android:inputType="textUri"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_Twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_twitter"
                android:inputType="textUri"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_Skype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_skype"
                android:inputType="textUri"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <EditText
                android:id="@+id/edit_YouTube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:ems="10"
                android:hint="@string/hint_youtube"
                android:inputType="textUri"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/button_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/contact_save_string"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>